fix: adjust front page post thumbnail layout for better alignment and display

--- a/style.css
+++ b/style.css
@@ -426,11 +426,13 @@ body.focostv-home .focostv-site-navigation {
 
 .focostv-front-page-post-thumbnail {
     width: 34%;
+    display: flex;
+    align-items: center;
 }
 
 .focostv-front-page-post-thumbnail a img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .front-page-first-post {
@@ -440,6 +442,7 @@ body.focostv-home .focostv-site-navigation {
 .front-page-first-post .focostv-front-page-post,
 .front-page-first-post .focostv-front-page-post-thumbnail {
     width: 100%;
+    display: block; /* MOSTRAR EN TAMANIO COMPLETO  LOS PRIMEROS POSTS*/
 }
 
 .front-page-first-post .focostv-front-page-post-thumbnail {
